test/TestPhases/namecheck/valid/exposedimportexported.blc
import n "../imports/names" exposes T

@[EntryPoint]
activity Main ()
    run let t: T = n.A()
end