test/TestPhases/namecheck/invalid/exposedimportnotexported.blc
import n "../imports/names" exposes f 

@[EntryPoint]
activity Main ()
    await true
end